--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.3",
     "mongoose": "^5.13.14",
     "morgan": "^1.10.0",
-    "nanoid": "^3.3.3"
+    "nanoid": "^3.3.3",
+    "slugify": "^1.6.5"
   }
 }
